Setup/Design->HTML

--- a/web/index.html
+++ b/web/index.html
@@ -33,10 +33,10 @@
     <header>
         <div class="header">
             <div class="logo">
-                <img src="images/logo.gif" alt="SURFnet"/>
+                <img src="images/SURF_conext_WEB.png" alt="SURFnet"/>
             </div>
             <div class="page-title">
-                My Connections
+                <h1>My Connections</h1>
             </div>
             <div class="page-buttons">
                 <div class="logout"><a href="#">Logout</a></div>
@@ -67,15 +67,50 @@
             <h2>My Connections</h2>
         </div>
         <div class="my-connections border-top row">
-            <h2>It seems you have no connections yet, why should you make some?</h2>
+            <h3>It seems you have no connections yet, why should you make some?</h3>
             <p>Because when you do, the attribute authority is used by OpenConext to enrich your existing attributes with connection.
             Services connected to OpenConext will be able to use your connections.</p>
         </div>
         <div class="content-subtitle border-top row">
             <h3>Available connections</h3>
         </div>
-        <div class="available-connections border-top row orcid">ORCID</div>
-        <div class="available-connections border-top row twitter">twitter</div>
+        <div class="available-connections border-top row orcid">
+            <div class="connection-logo">
+                <div class="logo-container">
+                    <img src="images/orcid.png"/>
+                </div>
+            </div>
+            <div class="connection-description">
+                <p>
+                    <span class="service">ORCID</span> is a nonproprietary alphanumeric code to uniquely identify scientific
+                    and other academic authors. This addresses the problem that a particular author's contributions to the
+                    scientific literature or publications in the humanities can be hard to recognize as most personal names
+                    are not unique, they can change (such as with marriage), have cultural differences in name order,
+                    contain inconsistent use of first-name abbreviations and employ different writing systems.
+                </p>
+            </div>
+            <div class="connection-button">
+                <a class="btn connect" href="#">Connect</a>
+            </div>
+        </div>
+        <div class="available-connections border-top row twitter">
+            <div class="connection-logo">
+                <div class="logo-container">
+                    <img src="images/twitter.jpg"/>
+                </div>
+            </div>
+            <div class="connection-description">
+                <p>
+                    <span class="service">Twitter</span> is an online social networking service that enables users to send and read short
+                    140-character messages called "tweets". Registered users can read and post tweets, but unregistered
+                    users can only read them. Users access Twitter through the website interface, SMS, or mobile device
+                    app.
+                </p>
+            </div>
+            <div class="connection-button">
+                <a class="btn connect" href="#">Connect</a>
+            </div>
+        </div>
         <div class="content-footer border-top row">
             <h3>Missing connections?</h3>
             <p><a href="#">Send us a request</a></p>
